# grafter

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
examples/csvloader/: config.yaml  data_generater.py  run.py
grafter/: __init__.py  base_graph.py  config.py  data_loader.py  event_trigger_dag.py  feature_computer.py  feature_dag.py  feature_store.py  graph_manager.py  state_manager.py
tests/: test_base_graph.py  test_config.py  test_data_loader.py  test_event_trigger_dag.py  test_feature_computer.py  test_feature_dag.py  test_feature_store.py  test_graph_manager.py  test_state_manager.py
